fix(test): parameterize filter and update tests
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>